# huawei_summer_practice_1

./: CMakeLists.txt  readme.md
project/: CMakeLists.txt  main.cpp
project/code_examples/: example  example.cpp  includes_closed.cpp  includes_opened.cpp
test/: CMakeLists.txt  test1.cpp
